Created user export to json, vector script and upload to qdrant.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 media/*
+neural_search/job_listings.json
+neural_search/job_listings.npy
+neural_search/user_listings.json
+neural_search/user_listings.npy
