Add email verification for user registration
Introduced the functionality for sending a verification email to users during registration. Registration now requires email verification before the user is activated. Also, included email verification success and failure pages. Updated navbar in 'all_view_job' template to differentiate between user and recruiter.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 media/*
+techlister/.sendgrid.env
 neural_search/job_listings.json
 neural_search/job_listings.npy
 neural_search/user_listings.json
