--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ neural_search/job_listings.json
 neural_search/job_listings.npy
 neural_search/user_listings.json
 neural_search/user_listings.npy
+*__pycache__*
+staticfiles/*
