Refactor AI add experience HTML template
The existing HTML code for adding AI experience has been cleaned up. The div for 'Add Experience' heading is removed and the container div has been reassigned with the 'exp-add' id for cleaner and more streamlined design.

--- a/techlister/sendgrid.env
+++ b/techlister/sendgrid.env
@@ -1,1 +1,1 @@
-export SENDGRID_API_KEY='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'
+export SENDGRID_API_KEY='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'
