Update .gitignore file
Included 'techlister/settings.py' to .gitignore to prevent publishing these personal settings to the repository. This will enhance the security and privacy of developer-specific settings.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ db.sqlite3
 media/*
 static/*
 staticfiles/*
+techlister/settings.py
 techlister/.env
 techlister/.sendgrid.env
 neural_search/job_listings.json
