--- a/techlister/sendgrid.env
+++ b/techlister/sendgrid.env
@@ -1,1 +1,1 @@
-export SENDGRID_API_KEY='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'
+export SENDGRID_API_KEY='your-sendgrid-api-key'
